Add tests and fix bug found by them

--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,7 @@
 project(
   'ftl',
-  'cpp'
+  'cpp',
+  default_options : ['cpp_std=c++20']
 )
 
 ftl_includes = include_directories('include')
@@ -9,3 +10,6 @@ ftl_dep = declare_dependency(
     include_directories: ftl_includes
 )
 
+# TODO: hide behind an option, disable if used
+#       as a subproject
+subdir('tests')
