Reimplement allocator-powered ring buffer

--- a/meson.build
+++ b/meson.build
@@ -4,6 +4,8 @@ project(
   default_options : ['cpp_std=c++20']
 )
 
+add_global_arguments('-fconcepts-diagnostics-depth=3', language : 'cpp')
+
 ftl_includes = include_directories('include')
 
 ftl_dep = declare_dependency(
