Build tests only if not used as a subproject

--- a/meson.build
+++ b/meson.build
@@ -12,6 +12,6 @@ ftl_dep = declare_dependency(
     include_directories: ftl_includes
 )
 
-# TODO: hide behind an option, disable if used
-#       as a subproject
-subdir('tests')
+if meson.is_subproject() == false
+  subdir('tests')
+endif
